<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stack_master</name>
  <version>0.0.0</version>
  <description>The package to rule them all: Launch files, configs, maps you name it</description>
  <maintainer email="nicolas.baumann@pbl.ee.ethz.ch">ForzaETH</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>
  <depend>rclpy</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
