<?xml version="1.0"?>
<package format="2">
  <name>id_controller</name>
  <version>1.0.0</version>
  <description>The id_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jonbecke@ethz.ch">Jonathan Becker</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>f110_msgs</depend>
  <depend>std_msgs</depend>

  <license>MIT</license>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
