<?xml version="1.0"?>
<package format="2">
  <name>frenet_conversion</name>
  <version>0.0.0</version>
  <description>

    Transformation to and from frenet frame to global frame

  </description>
  <maintainer email="jonbecke@student.ethz.ch">Jonathan Becker</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>f110_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>


