<?xml version="1.0"?>
<package format="2">
  <name>frenet_odom_republisher</name>
  <version>0.0.0</version>
  <description>

    Republishing odemtry in frenet frame

  </description>
  <maintainer email="jonbecke@student.ethz.ch">Jonathan Becker</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>f110_msgs</depend>
  <depend>frenet_conversion</depend>
  <depend>tf</depend>
</package>


