<?xml version="1.0"?>
<package format="2">
  <name>lap_analyser</name>
  <version>0.0.0</version>
  <description>The lap_analyser package</description>

  <maintainer email="eghignone@ethz.ch">Edoardo Ghignone</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  
  <!-- ROS dependencies -->
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>f110_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
  

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
