<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_editor</name>
  <version>0.0.0</version>
  <description>The map editor package</description>
  <maintainer email="tialim@student.ethz.ch">ForzaETH</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclpy</depend>
  <depend>f110_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stack_master</depend>
  <depend>global_planner</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
